--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.13",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -25,7 +25,9 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ng-multiselect-dropdown": "^0.2.3",
+    "ngx-toastr": "^10.0.2",
     "rxjs": "~6.3.3",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
