--- a/client/angular.json
+++ b/client/angular.json
@@ -24,7 +24,8 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/font-awesome/css/font-awesome.css",
-              "./node_modules/ngx-toastr/toastr.css"
+              "./node_modules/ngx-toastr/toastr.css",
+              "src/styles.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
